html and readme

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
 
-    <!-- Home Container with quiz rules and Start button -->
+    <!--quiz rules and Start button -->
     <container>
     <div id="homeContainer" class="none">
         <h1>Coding Quiz Challenge</h1>
@@ -35,7 +35,7 @@
     </div>
     </container>
 
-        <!-- QUIZ CONTAINER -->
+        <!--quiz -->
         <div id="quizContainer" style="display: none"> 
             <h2 id="questionHeading"></h2>
             <!-- <div id="answerChoices"> -->
@@ -56,7 +56,7 @@
             </div>
 </body>
 
-<!-- RESULTS & HIGH SCORES CONTAINER -->
+<!--results-->
 <section id="AnswerResponse">
 </section>
 
